hphp/test/zend7/Zend/tests/exception_009.php.expectf
Recoverable fatal error: Object of class stdClass could not be converted to string in Unknown on line 0